--- a/desafios/nivel3/local-business/barber-shop/css/main.css
+++ b/desafios/nivel3/local-business/barber-shop/css/main.css
@@ -57,6 +57,11 @@ body {
   background-color: transparent;
 }
 
+.btn-outline:hover {
+  border: .2rem solid #D9D9D9;
+  color: #D9D9D9;
+}
+
 /*----- HEADER -----*/
 
 #header-container {
@@ -202,6 +207,12 @@ body {
   display: flex;
   gap: 1.6rem;
   align-items: center;
+}
+
+#location-container address span {
+  font-size: 20px;
+  line-height: 28px;
+  color: var(--black2);
 }
 
 /*----- FOOTER -----*/
