--- a/desafios/toDo/toDo.css
+++ b/desafios/toDo/toDo.css
@@ -1,62 +1,51 @@
-:root {
-  font-size: 62.5%;  /* 1rem = 10px */
+.content {
+  display: flex;
+  flex-direction: column;
+  margin: 100px;
   
-  --blue1: #19456B;
-  --blue2: #11698E;
-  --green1: #16C79A;
-  --white1: #FFFFFF;
-  --white2: #F8F1F1;
+  background: rgba(242,246,248,1);
+  background: -moz-linear-gradient(left, rgba(242,246,248,1) 0%, rgba(217,226,232,1) 28%, rgba(206,217,222,1) 77%, rgba(225,240,249,1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(242,246,248,1)), color-stop(28%, rgba(217,226,232,1)), color-stop(77%, rgba(206,217,222,1)), color-stop(100%, rgba(225,240,249,1)));
+  background: -webkit-linear-gradient(left, rgba(242,246,248,1) 0%, rgba(217,226,232,1) 28%, rgba(206,217,222,1) 77%, rgba(225,240,249,1) 100%);
+  background: -o-linear-gradient(left, rgba(242,246,248,1) 0%, rgba(217,226,232,1) 28%, rgba(206,217,222,1) 77%, rgba(225,240,249,1) 100%);
+  background: -ms-linear-gradient(left, rgba(242,246,248,1) 0%, rgba(217,226,232,1) 28%, rgba(206,217,222,1) 77%, rgba(225,240,249,1) 100%);
+  background: linear-gradient(to right, rgba(242,246,248,1) 0%, rgba(217,226,232,1) 28%, rgba(206,217,222,1) 77%, rgba(225,240,249,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', endColorstr='#e1f0f9', GradientType=1 );
+
+  -webkit-box-shadow: 14px 17px 28px -12px rgba(0,0,0,0.75);
+  -moz-box-shadow: 14px 17px 28px -12px rgba(0,0,0,0.75);
+  box-shadow: 14px 17px 28px -12px rgba(0,0,0,0.75);
+
+  border-radius: 10px 10px 10px 10px;
+  -moz-border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+  border: 0px solid #000000;
+
+  padding: 10px;
 }
 
-body {
-  font-family: 'Manrope', sans-serif;
+h2 {
+  font-size: 30px;
+  font-weight: 600;
+  color: #555252;
 }
 
-header {
-  font-size: 5rem;
-  color: var(--blue1);
+.title {
+  margin-bottom: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-#todocontainer {
+.input-button {
+  margin: auto;
+}
+
+ul {
+  padding: 10px;
+}
+
+li {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 3rem;
-  gap: 1rem;
-}
-
-#buttons {
-  display: flex;
-  gap: 1rem;
-}
-
-#addButton, #delButton {
-  width: 3rem;
-  height: 3rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 2rem;
-  border-radius: 100rem;
-  border: 0rem;
-  color: var(--white1);
-  background-color: var(--green1);
-}
-
-#delButton {
-  background-color: rgb(221, 50, 50);
-}
-
-#task {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-#tasks {
-  font-size: 1.5rem;
-  color: gray;
+  justify-content: space-between;
 }
