--- a/desafios/nivel3/toDoList/css/main.css
+++ b/desafios/nivel3/toDoList/css/main.css
@@ -81,6 +81,7 @@ button {
   color: var(--white);
 
   padding: 1.6rem 3.2rem;
+  width: 15.2rem;
 
   border-radius: 1.6rem;
 
@@ -150,4 +151,113 @@ button {
 .checked p {
   color: var(--green);
   text-decoration: line-through;
+}
+
+
+/*----- RESPOSIVE -----*/
+
+@media (max-width:720px) {
+  #container {
+    display: flex;
+    flex-direction: column;
+  
+    padding: 0 10rem;
+    gap: 3.4rem;
+  }
+  
+  /* Input Container */
+  
+  #input-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+  }
+  
+  
+  /* Title */
+  
+  #title {
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+  
+    margin-top: 2.2rem;
+  }
+  
+  #title h1,
+  #task-title h1 {
+    font-weight: 700;
+    font-size: 1.6rem;
+    line-height: 1.5rem;
+  }
+  
+  
+  /* Input Container */
+  
+  #input {
+    display: flex;
+    gap: 1.6rem;
+  }
+  
+  #input-task {
+    max-width: 47.2rem;
+  
+    font-size: 1.6rem;
+    line-height: 1.5rem;
+  
+    padding: 1.6rem;
+  }
+  
+  #btn-create {
+    padding: 1.6rem 3.2rem;
+    max-width: 15.2rem;
+  
+    border-radius: 1.6rem;
+  
+    font-size: 1.6rem;
+    line-height: 1.5rem;
+  }
+  
+  
+  /* Task Container */
+  
+  #task-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+  }
+  
+  #task-title {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+  }
+  
+  #task-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1.4rem;
+  }
+  
+  .task {
+    display: flex;
+    flex-direction: column;
+    gap: 1.4rem;
+  
+    max-width: 64rem;
+  }
+  
+  .task-field {
+    display: flex;
+    background-color: var(--white);
+    padding: 1.6rem;
+    border-radius: 2.4rem;
+    justify-content: space-between;
+  }
+  
+  .container-task-field {
+    display: flex;
+    gap: 2.4rem;
+    align-items: center;
+  }
 }
