--- a/javascript/modulo23/usandoReact/react/src/pages/ToDo/main.css
+++ b/javascript/modulo23/usandoReact/react/src/pages/ToDo/main.css
@@ -94,6 +94,12 @@ ul {
   margin-bottom: 1.6rem;
 }
 
+.taskElement {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
 .taskUnchecked {
   border: .2rem solid #FFFFFF;
 }
